--- a/src/components/ResponsiveNavBar.css
+++ b/src/components/ResponsiveNavBar.css
@@ -1,15 +1,12 @@
 /* ResponsiveNavBar.css */
 
-.layout {
-  /* min-height: 100vh; */
-}
-
 .header {
-  background-color: #ffffff; /* Set header background to white */
+  background-color: #ffffff;
   padding: 0 24px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  border: #000000;
 }
 
 .left-section {
@@ -48,7 +45,7 @@
 }
 
 .ant-drawer-header {
-  background-color: #ffffff; /* White background for drawer header */
+  background-color: #f4f4f4; /* White background for drawer header */
 }
 
 .ant-drawer-title {
@@ -56,7 +53,7 @@
 }
 
 .ant-drawer-body {
-  background-color: #ffffff; /* White background for drawer body */
+  background-color: #f4f4f4; /* White background for drawer body */
 }
 
 .ant-menu {
@@ -154,7 +151,7 @@
 /* Tooltip Styles */
 .ant-tooltip-inner {
   background-color: #000000;
-  color: #ffffff;
+  color: #f4f4f4;
 }
 
 /* Spin Styles */
